syntax = "proto3";

import "get_user.proto";

message DeleteUserRequest {
  string user_id = 1;
  GrpcUser requesting_user = 2;
}
